syntax = "proto3";

package com.creanga.taxidatalake.protobuftrip;

message TripStart {
    string trip_id = 1;
    string user_id = 2;
    string driver_id = 3;
    double start_latitude = 4;
    double start_longitude = 5;
    double end_latitude = 6;
    double end_longitude = 7;

    int64 order_timestamp = 8;
    int64 trip_timestamp = 9;

    enum PaymentType {
        CASH = 0;
        CARD = 1;
    }

    PaymentType payment_type = 10;

}

message TripEnd {
    string trip_id = 1;
    int64 timestamp = 4;
}

message TripStop {
    string trip_id = 1;
    double latitude = 2;
    double longitude = 3;
    int64 stop_timestamp = 4;
    int64 start_timestamp = 5;
}

message TripPing {
    string trip_id = 1;
    double latitude = 2;
    double longitude = 3;
    int64 timestamp = 4;
}